Tests/ContributeWordPressTests/Helpers/Error/DownloadError.swift
import Foundation

internal enum DownloadError: EquatableError {
  case assetDownload
}
